--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/menus-seccio/PaginacioMenus.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/menus-seccio/PaginacioMenus.css
@@ -19,7 +19,7 @@
 }
 
 .cn-bttn-pagina-anterior-enabled-paginacio-menus:hover {
-    background: #08f;
+    background: #9cf;
 }
 
 .cn-bttn-pagina-anterior-enabled-paginacio-menus:active {
@@ -40,7 +40,7 @@
 }
 
 .cn-bttn-pagina-seguent-enabled-paginacio-menus:hover {
-    background: #08f;
+    background: #9cf;
 }
 
 .cn-bttn-pagina-seguent-enabled-paginacio-menus:active {
@@ -100,7 +100,7 @@
 }
 
 .cn-actiu-span-bttn-paginacio-menus:hover {
-    background: #08f;
+    background: #9cf;
 }
 
 .cn-actiu-span-bttn-paginacio-menus:active {
@@ -121,7 +121,7 @@
 }
 
 .cn-desactiu-span-bttn-paginacio-menus:hover {
-    background: #08f;
+    background: #9cf;
 }
 
 .cn-desactiu-span-bttn-paginacio-menus:active {
