--- a/CAMPtina_Frontend/projecte-camptina/src/App.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/App.css
@@ -28,6 +28,17 @@
   width: 100%;
 }
 
+
+#id_video_usuaris {
+  aspect-ratio: 16/9;
+  width: 100%;
+}
+
+#id_video_equip {
+  aspect-ratio: 16/9;
+  width: 100%;
+}
+
 .cn-section-video-navegacio {
   display: flex;
   justify-content: center;
@@ -75,16 +86,6 @@
   gap: 10px;
   padding: 10px;
   position: relative;
-}
-
-#id_menjador {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  aspect-ratio: 16/9;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
 }
 
 .cn-select-inici {
@@ -335,10 +336,10 @@
   height: 50%;
   padding: 5px;
   font-size: 14px;
-  color: #222;
-  background: #ff0;
+  color: #fff;
+  background: #69c;
   border-radius: 4px;
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .cn-article-usuari-ui-navegacio > h4 {
@@ -412,7 +413,7 @@
   font-size: 0.8em;
   padding: 5px;
   color: #fff;
-  background: #222;
+  background: #69c;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   width: 100%;
@@ -421,7 +422,7 @@
 
 .cn-section-footer-link-peu > a:hover {
   font-size: 0.6em;
-  background: #075;
+  background: #9cf;
 }
 
 .cn-section-footer-link-peu > a:active {
@@ -429,14 +430,14 @@
 }
 
 @media (max-width: 1200px) {
-  .cn-footer-peu {
-    height: 300px;
-  }
-
   .cn-section-footer-link-peu {
-    flex-direction: column;
-    width: 25%;
-    height: 220px;
+    width: 96%;
+  }
+}
+
+@media (max-width: 950px) {
+  .cn-section-footer-link-peu > a {
+    font-size: 0.4em;
   }
 }
 /* footer -Z */
