--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/Menus.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/Menus.css
@@ -7,7 +7,7 @@
     border-radius: 8px;
     padding: 0.65em;
     width: 80%;
-    background: #fff;
+    background: #69c;
 }
 
 .cn-article-titol-menus {
@@ -36,14 +36,14 @@
     align-items: center;
     border: none;
     border-top-left-radius: 4px;
-    background: #222;
+    background: #69c;
     cursor: pointer;
     margin: 4px;
     width: 38px;
 }
 
 .cn-bttn-update-square-menus:hover {
-    background: #08f;
+    background: #9cf;
 }
 
 .cn-bttn-update-square-menus:active {
@@ -56,7 +56,7 @@
     align-items: center;
     border: none;
     border-radius: 4px;
-    background: #222;
+    background: #369;
     color: #fff;
     cursor: pointer;
     font-size: 1rem;
@@ -65,7 +65,7 @@
 }
 
 #id_submit_form_final_menus:hover {
-    background: #08f;
+    background: #9cf;
 }
 
 #id_submit_form_final_menus:active {
@@ -76,7 +76,7 @@
     display: flex;
     border: none;
     border-radius: 8px;
-    background: #fff;
+    background: #ffc;
     color: #222;
     width: 250px;
     height: 36px;
@@ -90,7 +90,7 @@
 }
 
 .cn-dynamic-input-titol-menus:focus {
-    outline: 4px double #222;
+    outline: 2px solid #69c;
 }
 
 .cn-article-bttn-span-menus {
@@ -119,18 +119,17 @@
     align-items: center;
     width: 20%;
     height: 100%;
-    background: #d0b;
+    background: #369;
     color: #fff;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     padding: 5px;
     font-size: 1.2rem;
-    transition: background 1s ease;
 }
 
 .cn-bttn-menu-actiu-menus:hover {
-    background: #08f;
+    background: #9cf;
 }
 
 .cn-bttn-menu-actiu-menus:active {
@@ -150,7 +149,6 @@
     cursor: pointer;
     padding: 5px;
     font-size: 1.2rem;
-    transition: background 1s ease;
 }
 
 .cn-bttn-menu-actiu-desmenus:hover {
