--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/FormActualitzarApat.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/FormActualitzarApat.css
@@ -33,10 +33,12 @@
     border: none;
     border-radius: 8px;
     font-size: 0.8rem;
+    background: #ffc;
+    color: #222;
 }
 
 .cn-input-nom-update-llista-apats:focus {
-    outline: 4px solid #222;
+    outline: 4px solid #369;
 }
 
 .cn-form-div-inputs-categoria-update-llista-apats {
@@ -57,10 +59,12 @@
     border-radius: 8px;
     cursor: pointer;
     font-size: 0.8rem;
+    background: #ffc;
+    color: #222;
 }
 
 .cn-select-categoria-update-llista-apats:focus {
-    outline: 4px solid #222;
+    outline: 4px solid #369;
 }
 
 .cn-form-div-inputs-descripcio-update-llista-apats {
@@ -82,16 +86,18 @@
     overflow: auto;
     resize: none;
     font-size: 0.8rem;
+    background: #ffc;
+    color: #222;
 }
 
 .cn-txtarea-descripcio-update-llista-apats:focus {
-    outline: 4px solid #222;
+    outline: 4px solid #369;
 }
 
 .cn-span-update-llista-apats {
     display: flex;
     align-items: center;
-    background: #ddd;
+    background: #ffc;
     color: #b44;
     width: 100%;
     height: 25px;
@@ -115,14 +121,14 @@
     align-items: center;
     width: 50px;
     height: 50px;
-    background: #b44;
+    background: #369;
     border: none;
     border-radius: 8px;
     cursor: pointer;
 }
 
 .cn-bttn-cancelar-update-llista-apats:hover {
-    background: #f44;
+    background: #9cf;
 }
 
 .cn-bttn-cancelar-update-llista-apats:active {
@@ -135,7 +141,7 @@
     align-items: center;
     width: 100px;
     height: 50px;
-    background: #222;
+    background: #369;
     color: #fff;
     border: none;
     border-radius: 8px;
@@ -143,7 +149,7 @@
 }
 
 .cn-submit-update-llista-apats:hover {
-    background: #000;
+    background: #9cf;
 }
 
 .cn-submit-update-llista-apats:active {
