--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/FormCrearApat.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/FormCrearApat.css
@@ -7,6 +7,7 @@
     padding: 0.65em;
     width: 80%;
     min-height: 70px;
+    background: #69c;
 }
 
 .cn-article-nom-form-crear-apat {
@@ -75,8 +76,8 @@
     display: flex;
     align-items: center;
     font-size: 1.2em;
-    background: #222;
-    opacity: 0.9;
+    background: #ffc;
+    color: #222;
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
     padding-left: 5px;
@@ -95,8 +96,8 @@
     display: flex;
     align-items: center;
     font-size: 1.2em;
-    background: #222;
-    opacity: 0.9;
+    background: #ffc;
+    color: #222;
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
     padding-left: 5px;
@@ -115,10 +116,12 @@
     padding: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
+    background: #ffc;
+    color: #222;
 }
 
 .cn-input-txt-form-crear-apat:focus {
-    outline: 4px solid #222;
+    outline: 4px solid #369;
 }
 
 .cn-select-form-crear-apat {
@@ -133,10 +136,12 @@
     cursor: pointer;
     margin-top: 5px;
     margin-bottom: 5px;
+    background: #ffc;
+    color: #222;
 }
 
 .cn-select-form-crear-apat:focus {
-    outline: 4px solid #222;
+    outline: 4px solid #369;
 }
 
 .cn-div-container-txtarea-form-crear-apat {
@@ -160,8 +165,8 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2em;
-    background: #222;
-    opacity: 0.9;
+    background: #ffc;
+    color: #222;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     padding-left: 5px;
@@ -177,10 +182,12 @@
     border-radius: 8px;
     padding: 0.65em;
     font-size: 1.2em;
+    background: #ffc;
+    color: #222;
 }
 
 .cn-txtarea-form-crear-apat:focus {
-    outline: 4px solid #222;
+    outline: 4px solid #369;
 }
 
 .cn-div-bttn-form-crear-apat {
@@ -188,7 +195,7 @@
     align-self: flex-end;
     justify-content: flex-end;
     gap: 10%;
-    width: 20%;
+    width: 25%;
     height: 50px;
 }
 
@@ -196,18 +203,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #258;
-    color: #fff;
+    background: #369;
     border: none;
     border-radius: 8px;
     font-size: 0.8em;
     cursor: pointer;
-    width: 30%;
+    width: 45%;
     height: 100%;
 }
 
 #id_reset_form_crear_apat:hover {
-    background: #222;
+    background: #9cf;
 }
 
 #id_reset_form_crear_apat:active {
@@ -218,18 +224,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #b44;
+    background: #369;
     color: #fff;
     border: none;
     border-radius: 8px;
     font-size: 1em;
     cursor: pointer;
-    width: 60%;
+    width: 45%;
     height: 100%;
 }
 
 #id_submit_form_crear_apat:hover {
-    background: #f44;
+    background: #9cf;
 }
 
 #id_submit_form_crear_apat:active {
@@ -245,8 +251,7 @@
     align-items: center;
     border: none;
     border-top-right-radius: 4px;
-    background: #258;
-    color: #fff;
+    background: #69c;
     cursor: pointer;
     margin: 4px;
     width: 38px;
@@ -254,7 +259,7 @@
 }
 
 .cn-bttn-finestra-form-crear-apat:hover {
-    background: #b44;
+    background: #9cf;
 }
 
 .cn-bttn-finestra-form-crear-apat:active {
@@ -266,7 +271,7 @@
     align-items: center;
     font-size: 0.8em;
     padding-left: 10px;
-    background: #ddd;
+    background: #ffc;
     color: #b44;
     width: 100%;
     height: 30px;
