--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/LlistaApats.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/LlistaApats.css
@@ -7,6 +7,7 @@
     padding: 0.65em;
     width: 80%;
     min-height: 70px;
+    background: #69c;
 }
 
 .cn-article-nom-llista-apats {
@@ -146,8 +147,8 @@
     font-size: 1.2em;
     width: 5%;
     height: 100%;
-    background: #fff;
-    color: #000;
+    background: #ffc;
+    color: #222;
     border-radius: 8px;
     overflow: auto;
 }
@@ -160,8 +161,8 @@
     font-size: 1.2em;
     width: 35%;
     height: 100%;
-    background: #fff;
-    color: #000;
+    background: #ffc;
+    color: #222;
     border-radius: 8px;
     overflow: auto;
 }
@@ -174,8 +175,8 @@
     font-size: 1.2em;
     width: 10%;
     height: 100%;
-    background: #fff;
-    color: #000;
+    background: #ffc;
+    color: #222;
     border-radius: 8px;
     overflow: auto;
 }
@@ -188,8 +189,8 @@
     font-size: 0.8em;
     width: 35%;
     height: 100%;
-    background: #fff;
-    color: #000;
+    background: #ffc;
+    color: #222;
     border-radius: 8px;
     overflow: auto;
 }
@@ -214,7 +215,7 @@
     align-items: center;
     border: none;
     border-top-right-radius: 4px;
-    background: #258;
+    background: #69c;
     color: #fff;
     cursor: pointer;
     margin: 4px;
@@ -223,7 +224,7 @@
 }
 
 .cn-bttn-finestra-llista-apats:hover {
-    background: #b44;
+    background: #9cf;
 }
 
 .cn-bttn-finestra-llista-apats:active {
@@ -249,14 +250,14 @@
     align-items: center;
     border: none;
     border-top-left-radius: 4px;
-    background: #258;
+    background: #69c;
     cursor: pointer;
     width: 38px;
     height: 38px;
 }
 
 .cn-bttn-filtre-llista-apats:hover {
-    background: #b44;
+    background: #9cf;
 }
 
 .cn-bttn-filtre-llista-apats:active {
@@ -270,7 +271,7 @@
     border: none;
     border-radius: 8px;
     background: #fff;
-    color: #258;
+    color: #69c;
     text-align: center;
     cursor: pointer;
     font-size: 1rem;
@@ -285,14 +286,14 @@
     border: none;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-    background: #258;
+    background: #369;
     cursor: pointer;
     width: 100%;
     height: 100%;
 }
 
 .cn-bttn-update-llista-apats:hover {
-    background: #111;
+    background: #9cf;
 }
 
 .cn-bttn-update-llista-apats:active {
@@ -308,14 +309,14 @@
     border: none;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
-    background: #b44;
+    background: #369;
     cursor: pointer;
     width: 100%;
     height: 100%;
 }
 
 .cn-bttn-delete-llista-apats:hover {
-    background: #f44;
+    background: #9cf;
 }
 
 .cn-bttn-delete-llista-apats:active {
@@ -339,12 +340,12 @@
     border: none;
     border-radius: 8px;
     font-size: 1.5rem;
-    background: #fff;
+    background: #ffc;
     color: #222;
 }
 
 .cn-input-filtre-search-llista-apats:focus {
-    outline: 4px solid #222;
+    outline: 4px solid #369;
 }
 
 /* Icones A- */
