--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/menus-seccio/ArticleMenus.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/menus-seccio/ArticleMenus.css
@@ -2,19 +2,18 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    border: 2px solid #fff;
+    border: 2px solid #69c;
     border-radius: 8px;
     padding: 0.65em;
     width: 60%;
     min-height: 60px;
-    background: #075;
 }
 
 .cn-primer-article-menus {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f80;
+    background: #222;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     width: 100%;
@@ -26,7 +25,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f80;
+    background: #222;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     width: 100%;
@@ -38,7 +37,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f80;
+    background: #222;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     width: 100%;
@@ -56,7 +55,7 @@
     width: 100%;
     height: 40px;
     padding: 5px;
-    background: #222;
+    background: #333;
     border-radius: 8px;
 }
 
@@ -64,8 +63,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f80;
-    opacity: 0.8;
+    background: #ffc;
+    color: #222;
     border-radius: 4px;
     width: 100%;
     height: 30px;
@@ -75,8 +74,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f80;
-    opacity: 0.8;
+    background: #ffc;
+    color: #222;
     border-radius: 4px;
     width: 100%;
     height: 30px;
@@ -86,8 +85,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f80;
-    opacity: 0.8;
+    background: #ffc;
+    color: #222;
     border-radius: 4px;
     width: 100%;
     height: 30px;
@@ -103,14 +102,14 @@
     align-items: center;
     border: none;
     border-radius: 4px;
-    background: #222;
+    background: #369;
     cursor: pointer;
     width: 30px;
     height: 30px;
 }
 
 .cn-bttn-remove-article-menus:hover {
-    background: radial-gradient(#bbb, #999);
+    background: #9cf;
 }
 
 .cn-bttn-remove-article-menus:active {
