--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/menus-seccio/LlistaMenus.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/menus-seccio/LlistaMenus.css
@@ -2,12 +2,12 @@
     display: none;
     flex-direction: column;
     gap: 10px;
-    border: 2px solid #fff;
+    border: 2px solid #69c;
     border-radius: 8px;
     padding: 0.65em;
     width: 80%;
     min-height: 70px;
-    background: #075;
+    background: #69c;
 }
 
 .cn-article-nom-llista-menus {
@@ -42,12 +42,12 @@
     border: none;
     border-radius: 8px;
     font-size: 1.5rem;
-    background: #fff;
+    background: #ffc;
     color: #222;
 }
 
 .cn-input-filtre-llista-menus:focus {
-    outline: 4px solid #222;
+    outline: 4px solid #369;
 }
 
 .cn-article-llista-menus {
@@ -63,7 +63,7 @@
     width: 100%;
     height: 50px;
     padding: 5px;
-    background: #222;
+    background: #333;
     border-radius: 8px;
 }
 
@@ -82,7 +82,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f80;
+    background: #ffc;
+    color: #222;
     border-radius: 4px;
     width: 75%;
     height: 40px;
@@ -92,7 +93,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f80;
+    background: #ffc;
+    color: #222;
     border-radius: 4px;
     width: 75%;
     height: 40px;
@@ -102,7 +104,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f80;
+    background: #ffc;
+    color: #222;
     border-radius: 4px;
     width: 75%;
     height: 40px;
@@ -118,14 +121,14 @@
     align-items: center;
     border: none;
     border-radius: 4px;
-    background: #222;
+    background: #369;
     cursor: pointer;
     width: 40px;
     height: 40px;
 }
 
 .cn-bttn-add-menu-llista-menus:hover {
-    background: radial-gradient(#bbb, #999);
+    background: #9cf;
 }
 
 .cn-bttn-add-menu-llista-menus:active {
