--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/torns-seccio/FormCrearTorn.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/torns-seccio/FormCrearTorn.css
@@ -6,7 +6,8 @@
     border-radius: 8px;
     padding: 0.65em;
     width: 80%;
-    height: 340px;
+    min-height: 70px;
+    background: #69c;
 }
 
 .cn-article-nom-form-crear-torn {
@@ -28,95 +29,168 @@
 .cn-form-crear-torn {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     width: 100%;
-    height: 220px;
+    height: 260px;
 }
 
 .cn-div-contingut-form-crear-torn {
     display: flex;
-    justify-content: space-between;
+    gap: 10%;
     width: 100%;
-    height: 160px;
+    height: 200px;
 }
 
-.cn-div-txt-form-crear-torn {
+.cn-div-txt-nom-aforament-form-crear-torn {
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    width: 50%;
-    height: 100%;
-    margin-top: 25px;
-    margin-left: 15px;
+    gap: 20px;
+    width: 45%;
+    height: 200px;
+}
+
+.cn-div-txt-horaris-form-crear-torn {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 45%;
+    height: 200px;
+}
+
+.cn-div-container-form-crear-torn {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    height: 90px;
 }
 
 .cn-div-lbl-text-form-crear-torn {
     display: flex;
-    justify-content: space-between;
+    gap: 10%;
     width: 100%;
     height: 50px;
-    position: relative;
-    
-}
-
-.cn-div-lbl-time-form-crear-torn {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 50px;
-    position: relative;
-    gap: 3.0em;
-    
-}
-
-.cn-div-lbl-time-form-crear-torn > label {
-    display: flex;
-    align-items: center;
-    font-size: 1.2em;
-    background: #222;
-    opacity: 0.9;
-    border-top-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-    padding-left: 5px;
-    width: 30%;
-    height: 100%;
-    
 }
 
 .cn-div-lbl-text-form-crear-torn > label {
     display: flex;
     align-items: center;
     font-size: 1.2em;
-    background: #222;
+    background: #ffc;
+    color: #222;
     opacity: 0.9;
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
     padding-left: 5px;
     width: 40%;
-    height: 100%;
+    height: 50px;
 }
 
-.cn-input-txt-form-crear-torn {
+.cn-input-txt-nom-form-crear-torn {
     display: flex;
     align-items: center;
     border: none;
     border-radius: 8px;
     font-size: 1.2em;
     width: 50%;
-    height: 100%;
-    padding: 0.65em;
+    height: 40px;
+    padding: 5px;
+    background: #ffc;
+    color: #222;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background: #ffc;
+    color: #222;
 }
 
-.cn-input-time-form-crear-torn {
+.cn-input-txt-nom-form-crear-torn:focus {
+    outline: 4px solid #369;
+}
+
+.cn-input-num-form-crear-torn {
     display: flex;
-    justify-content: center;
     align-items: center;
     border: none;
     border-radius: 8px;
     font-size: 1.2em;
-    width: 18%;
-    height: 100%;
-    padding: 0.65em;
+    width: 50%;
+    height: 40px;
+    padding: 5px;
+    background: #ffc;
+    color: #222;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background: #ffc;
+    color: #222;
+}
+
+.cn-input-num-form-crear-torn:focus {
+    outline: 4px solid #369;
+}
+
+.cn-div-lbl-time-form-crear-torn {
+    display: flex;
+    gap: 10%;
+    width: 100%;
+    height: 50px;
+}
+
+.cn-div-lbl-time-form-crear-torn > label {
+    display: flex;
+    align-items: center;
+    font-size: 1.2em;
+    background: #ffc;
+    color: #222;
+    opacity: 0.9;
+    border-top-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    padding-left: 5px;
+    width: 40%;
+    height: 50px;
+}
+
+.cn-input-inici-form-crear-torn {
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 8px;
+    font-size: 1.2em;
+    width: 50%;
+    height: 40px;
+    padding: 5px;
+    background: #ffc;
+    color: #222;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background: #ffc;
+    color: #222;
+    cursor: pointer;
+}
+
+.cn-input-inici-form-crear-torn:focus {
+    outline: 4px solid #369;
+}
+
+.cn-input-final-form-crear-torn {
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 8px;
+    font-size: 1.2em;
+    width: 50%;
+    height: 40px;
+    padding: 5px;
+    background: #ffc;
+    color: #222;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background: #ffc;
+    color: #222;
+    cursor: pointer;
+}
+
+.cn-input-final-form-crear-torn:focus {
+    outline: 4px solid #369;
 }
 
 .cn-div-bttn-form-crear-torn {
@@ -124,29 +198,24 @@
     align-self: flex-end;
     justify-content: flex-end;
     gap: 10%;
-    width: 20%;
+    width: 25%;
     height: 50px;
-    margin-top: 25px;
 }
-
 
 #id_reset_form_crear_torn {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #258;
-    color: #fff;
+    background: #369;
     border: none;
     border-radius: 8px;
-    font-size: 0.8em;
     cursor: pointer;
-    width: 30%;
+    width: 45%;
     height: 100%;
-    transition: all 0.2s ease-in-out;
 }
 
 #id_reset_form_crear_torn:hover {
-    background: #2563eb;
+    background: #9cf;
 }
 
 #id_reset_form_crear_torn:active {
@@ -157,19 +226,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #b44;
+    background: #369;
     color: #fff;
     border: none;
     border-radius: 8px;
     font-size: 1em;
     cursor: pointer;
-    width: 60%;
+    width: 45%;
     height: 100%;
-    transition: all 0.2s ease-in-out;
 }
 
 #id_submit_form_crear_torn:hover {
-    background: #f44;
+    background: #9cf;
 }
 
 #id_submit_form_crear_torn:active {
@@ -185,8 +253,7 @@
     align-items: center;
     border: none;
     border-top-right-radius: 4px;
-    background: #258;
-    color: #fff;
+    background: #69c;
     cursor: pointer;
     margin: 4px;
     width: 38px;
@@ -194,46 +261,50 @@
 }
 
 .cn-bttn-finestra-form-crear-torn:hover {
-    background: #b44;
+    background: #9cf;
 }
 
 .cn-bttn-finestra-form-crear-torn:active {
     transform: scale(0.9);
 }
 
-.cn-span-error-container-text {
-    margin-top: -25px;
-    display:block;  
-}
-
-.cn-span-error-container-time {
-    margin-top: -25px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    width:auto;
-
-}
-
 .cn-span-error-form-torns {
     display: flex;
     align-items: center;
-    padding: 5px;
-    width: auto;
-    height: 24px;
-    font-size: 0.8rem;
-    background: #ddd;
+    font-size: 0.8em;
+    padding-left: 10px;
+    background: #ffc;
     color: #b44;
-    border-top-right-radius: 8px;
-    border-bottom-left-radius: 8px;
+    width: 100%;
+    height: 30px;
+    border-bottom-right-radius: 8px;
+    border-top-left-radius: 8px;
 }
 
-@media (max-width: 550px) {
-    .cn-section-form-crear-torn {
-        margin-top: 100px;
-        overflow: auto;
+@media (max-width: 1200px) {
+    .cn-div-lbl-text-form-crear-torn > label {
+        font-size: 0.8em;
+    }
+    
+    .cn-input-txt-nom-form-crear-torn {
+        font-size: 0.8em;
     }
 
+    .cn-input-num-form-crear-torn {
+        font-size: 0.8em;
+    }
+
+    .cn-div-lbl-time-form-crear-torn > label {
+        font-size: 0.8em;
+    }
+    
+    .cn-input-inici-form-crear-torn {
+        font-size: 0.8em;
+    }
+    
+    .cn-input-final-form-crear-torn {
+        font-size: 0.8em;
+    }
 }
 
 @media (max-width: 800px) {
@@ -246,69 +317,34 @@
         overflow: auto;
     }
 
-    .cn-div-lbl-text-form-crear-torn > label {
-        font-size: 0.8em;
-        overflow: auto;
-    }
-
-    .cn-div-lbl-time-form-crear-torn > label {
-        font-size: 0.8em;
-        overflow: auto;
-    }
-   
-    .cn-input-txt-form-crear-torn {
-        font-size: 0.8em;
-        overflow: auto;
-    }
-    
-    .cn-input-time-form-crear-torn {
-        font-size: 0.8em;
-        overflow: auto;
-    }    
-
-}
-
-@media (max-width: 1500px) {
-    .cn-section-form-crear-torn {
-        height: 600px;
-    }
-
     .cn-form-crear-torn {
-        gap: 150px;
+        height: 480px;
     }
 
     .cn-div-contingut-form-crear-torn {
         flex-direction: column;
-        gap: 10px;
-        width: 100%;
-        height: 280px;
+        gap: 20px;
+        height: 420px;
     }
 
-    .cn-div-txt-form-crear-torn {
-        width: 90%;
+    .cn-div-txt-nom-aforament-form-crear-torn {
+        width: 100%;
+    }
+    
+    .cn-div-txt-horaris-form-crear-torn {
+        width: 100%;
     }
 
     .cn-div-bttn-form-crear-torn {
-        width: 100%;
+        align-self: center;
         justify-content: center;
-        gap: 10px;
+        width: 90%;
     }
+}
 
-    #id_reset_form_crear_torn {
-        font-size: 1em;
-    }
-
-    #id_submit_form_crear_torn {
-        font-size: 1.2em;
-    }
-    
-    .cn-div-lbl-time-form-crear-torn { 
-        justify-content: start;
-    }
-
-    .cn-span-error-container-time{
-        margin-left: 0px; 
-        width: 100%;
-        display: block;
+@media (max-width: 550px) {
+    .cn-section-form-crear-torn {
+        margin-top: 100px;
+        overflow: auto;
     }
 }
