--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/contacte/Contacte.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/contacte/Contacte.css
@@ -3,6 +3,9 @@
     flex-direction: column;
     gap: 40px;
     width: 80%;
+    border-radius: 12px;
+    padding: 10px;
+    background: #69c;
 }
 
 .cn-article-titol-contacte {
@@ -11,6 +14,10 @@
     align-items: center;
     width: 100%;
     height: 60px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    background: #369;
+    overflow: auto;
 }
 
 .cn-article-titol-contacte > h1 {
@@ -61,15 +68,15 @@
     padding: 5px;
     width: 100%;
     height: 40px;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     border: none;
     border-radius: 8px;
-    background: #fff;
-    color: #000;
+    background: #ffc;
+    color: #222;
 }
 
 .cn-form-nom-contacte:focus {
-    outline: 4px solid #000;
+    outline: 4px solid #369;
 }
 /* DIV NOM -Z */
 
@@ -97,15 +104,15 @@
     padding: 5px;
     width: 100%;
     height: 40px;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     border: none;
     border-radius: 8px;
-    background: #fff;
-    color: #000;
+    background: #ffc;
+    color: #222;
 }
 
 .cn-form-email-contacte:focus {
-    outline: 4px solid #000;
+    outline: 4px solid #369;
 }
 /* DIV EMAIL -Z */
 
@@ -136,13 +143,13 @@
     font-size: 1rem;
     border: none;
     border-radius: 8px;
-    background: #fff;
-    color: #000;
+    background: #ffc;
+    color: #222;
     resize: none;
 }
 
 .cn-form-missatge-contacte:focus {
-    outline: 4px solid #000;
+    outline: 4px solid #369;
 }
 /* DIV MISSATGE -Z */
 
@@ -185,13 +192,13 @@
     align-items: center;
     width: 100%;
     height: 20px;
-    color: #08f;
+    color: #222;
     font-size: 0.8rem;
 }
 
 .cn-form-div-checkbox-contacte > a:hover {
     text-decoration-line: underline;
-    text-decoration-color: #08f;
+    text-decoration-color: #222;
 }
 /* DIV CHECKBOX -Z */
 
@@ -202,7 +209,7 @@
     width: 100%;
     height: 24px;
     font-size: 0.8rem;
-    background: #ddd;
+    background: #ffc;
     color: #b44;
     border-top-right-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -216,13 +223,13 @@
     height: 40px;
     border: none;
     border-radius: 8px;
-    background: #fff;
-    color: #000;
+    background: #ffc;
+    color: #222;
     cursor: pointer;
 }
 
 #id_submit_contacte:hover {
-    background: #ddd;
+    background: #9fc;
 }
 
 #id_submit_contacte:active {
@@ -244,27 +251,17 @@
     font-size: 0.8rem;
 }
 
-@media (max-width: 550px) {
-    .info-contact {
-        display: none;
-    }
-
-    .cn-form-contacte {
-        width: 100%;
-    }
-}
-
 @media (max-width: 800px) {
     .cn-section-contacte {
         width: 96%;
     }
 
     .cn-form-div-nom-contacte > label {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 
     .cn-form-div-email-contacte > label {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 
     .cn-form-div-missatge-contacte > label {
@@ -273,5 +270,25 @@
 
     .cn-form-div-input-lbl-checkbox-contacte > label {
         font-size: 0.6rem;
+        overflow: auto;
+    }
+
+    .cn-form-div-checkbox-contacte > a {
+        overflow: auto;
+    }
+}
+
+@media (max-width: 550px) {
+    .cn-section-contacte {
+        margin-top: 100px;
+        overflow: auto;
+    }
+
+    .info-contact {
+        display: none;
+    }
+
+    .cn-form-contacte {
+        width: 100%;
     }
 }
