--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/LlistaUsuaris.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/LlistaUsuaris.css
@@ -7,6 +7,7 @@
     padding: 0.65em;
     width: 80%;
     min-height: 70px;
+    background: #69c;
 }
 
 .cn-article-nom-llista-usuaris {
@@ -37,6 +38,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 1%;
     width: 100%;
     height: 50px;
 }
@@ -45,7 +47,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 10%;
+    width: 5%;
     height: 50px;
     background: #111;
     border-bottom-right-radius: 8px;
@@ -58,7 +60,7 @@
     align-items: center;
     padding: 5px;
     font-size: 0.8em;
-    width: 20%;
+    width: 5%;
     height: 50px;
     background: #222;
     border-bottom-right-radius: 8px;
@@ -72,7 +74,7 @@
     align-items: center;
     padding: 5px;
     font-size: 0.8em;
-    width: 20%;
+    width: 35%;
     height: 50px;
     background: #333;
     border-bottom-right-radius: 8px;
@@ -80,7 +82,7 @@
     overflow: auto;
 }
 
-.cn-li-categoria-llista-usuaris {
+.cn-li-rol-llista-usuaris {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -94,7 +96,7 @@
     overflow: auto;
 }
 
-.cn-li-descripcio-llista-usuaris {
+.cn-li-email-llista-usuaris {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -131,7 +133,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 10%;
+    width: 5%;
     height: 50px;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
@@ -143,9 +145,10 @@
     align-items: center;
     padding: 5px;
     font-size: 0.8em;
-    width: 20%;
+    width: 5%;
     height: 50px;
-    background: #f75;
+    background: #ffc;
+    color: #222;
     border-radius: 8px;
     overflow: auto;
 }
@@ -156,14 +159,15 @@
     align-items: center;
     padding: 5px;
     font-size: 0.8em;
-    width: 20%;
+    width: 35%;
     height: 50px;
-    background: #e75;
+    background: #ffc;
+    color: #222;
     border-radius: 8px;
     overflow: auto;
 }
 
-.cn-li-item-categoria-llista-usuaris {
+.cn-li-item-rol-llista-usuaris {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -171,12 +175,13 @@
     font-size: 0.8em;
     width: 10%;
     height: 50px;
-    background: #d75;
+    background: #ffc;
+    color: #222;
     border-radius: 8px;
     overflow: auto;
 }
 
-.cn-li-item-descripcio-llista-usuaris {
+.cn-li-item-email-llista-usuaris {
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -184,7 +189,8 @@
     font-size: 0.8em;
     width: 35%;
     height: 50px;
-    background: #c75;
+    background: #ffc;
+    color: #222;
     border-radius: 8px;
     overflow: auto;
 }
@@ -209,15 +215,14 @@
     align-items: center;
     border: none;
     border-top-right-radius: 4px;
-    background: #258;
-    color: #fff;
+    background: #69c;
     cursor: pointer;
     margin: 4px;
     width: 38px;
 }
 
 .cn-bttn-finestra-llista-usuaris:hover {
-    background: #b44;
+    background: #9cf;
 }
 
 .cn-bttn-finestra-llista-usuaris:active {
@@ -236,27 +241,6 @@
     width: 240px;
     height: 38px;
 }
-.cn-bttn-update-llista-usuaris {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border:none;
-    border-radius: 8px;
-    background: #258;
-    transition: background 0.3s;
-    cursor: pointer;
-    width: 50%;
-    margin: 0 auto;
-    transform-origin: center;
-    height: 100%;
-  }
-  .cn-bttn-update-llista-usuaris:hover {
-    background: #2563eb;
-  }
-  
-  .cn-bttn-update-llista-usuaris:active {
-    transform: scale(0.9);
-  }
 
 .cn-bttn-filtre-llista-usuaris {
     display: flex;
@@ -264,14 +248,14 @@
     align-items: center;
     border: none;
     border-top-left-radius: 4px;
-    background: #258;
+    background: #69c;
     cursor: pointer;
     width: 38px;
     height: 38px;
 }
 
 .cn-bttn-filtre-llista-usuaris:hover {
-    background: #b44;
+    background: #9cf;
 }
 
 .cn-bttn-filtre-llista-usuaris:active {
@@ -285,7 +269,7 @@
     border: none;
     border-radius: 8px;
     background: #fff;
-    color: #258;
+    color: #69c;
     text-align: center;
     cursor: pointer;
     font-size: 1rem;
@@ -300,14 +284,14 @@
     border: none;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-    background: #258;
+    background: #369;
     cursor: pointer;
     width: 100%;
     height: 100%;
 }
 
 .cn-bttn-update-llista-usuaris:hover {
-    background: #111;
+    background: #9cf;
 }
 
 .cn-bttn-update-llista-usuaris:active {
@@ -323,14 +307,14 @@
     border: none;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
-    background: #b44;
+    background: #369;
     cursor: pointer;
     width: 100%;
     height: 100%;
 }
 
 .cn-bttn-delete-llista-usuaris:hover {
-    background: #f44;
+    background: #9cf;
 }
 
 .cn-bttn-delete-llista-usuaris:active {
