--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/menus-seccio/PaginacioMenus.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/menus-seccio/PaginacioMenus.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     width: 100%;
     height: 50px;
+    overflow: auto;
 }
 
 .cn-bttn-pagina-anterior-enabled-paginacio-menus {
