--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/FormCrearApat.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/FormCrearApat.css
@@ -76,7 +76,7 @@
     display: flex;
     align-items: center;
     font-size: 1.2em;
-    background: #ffc;
+    background: #fff;
     color: #222;
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
@@ -96,7 +96,7 @@
     display: flex;
     align-items: center;
     font-size: 1.2em;
-    background: #ffc;
+    background: #fff;
     color: #222;
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
@@ -116,7 +116,7 @@
     padding: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
-    background: #ffc;
+    background: #fff;
     color: #222;
 }
 
@@ -136,7 +136,7 @@
     cursor: pointer;
     margin-top: 5px;
     margin-bottom: 5px;
-    background: #ffc;
+    background: #fff;
     color: #222;
 }
 
@@ -165,7 +165,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2em;
-    background: #ffc;
+    background: #fff;
     color: #222;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
@@ -182,7 +182,7 @@
     border-radius: 8px;
     padding: 0.65em;
     font-size: 1.2em;
-    background: #ffc;
+    background: #fff;
     color: #222;
 }
 
@@ -271,7 +271,7 @@
     align-items: center;
     font-size: 0.8em;
     padding-left: 10px;
-    background: #ffc;
+    background: #fff;
     color: #b44;
     width: 100%;
     height: 30px;
