--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/torns-seccio/FormActualitzarTorn.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/torns-seccio/FormActualitzarTorn.css
@@ -1,86 +1,145 @@
 .form-update-torn {
-  padding: 1rem;
-  background: #f5f5f5;
-  border-radius: 8px;
-  margin: 0.5rem 0;
-}
-
-.form-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-}
-
-.form-group {
   display: flex;
   flex-direction: column;
+  gap: 10px;
+  padding: 1rem;
+  background: #2bb;
+  border-radius: 8px;
+  overflow: auto;
 }
 
-.form-group input {
-  padding: 0.5rem;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+.form-grid-form-actualitzar-torn {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  width: 100%;
 }
 
-.form-actions {
+.form-group-form-actualitzar-torn {
   display: flex;
-  gap: 1rem;
-  margin-top: 1rem;
-  justify-content: flex-end;
+  flex-direction: column;
+  gap: 5px;
+  width: 100%;
+  height: 70px;
 }
 
-.btn-cancel,
-.btn-submit {
-  padding: 0.5rem 1rem;
+.form-group-form-actualitzar-torn > input {
+  display: flex;
+  padding: 5px;
+  border: none;
+  border-radius: 4px;
+  font-size: 0.8em;
+  width: 100%;
+  height: 40px;
+}
+
+.form-group-form-actualitzar-torn > input:focus {
+  outline: 2px solid #369;
+}
+
+.form-actions-form-actualitzar-torn {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1%;
+  width: 100%;
+  height: 40px;
+}
+
+.btn-cancel-form-actualitzar-torn {
+  padding: 5px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   display: flex;
   align-items: center;
-  gap: 0.5rem;
-  width: 4%;
+  justify-content: center;
+  width: 40px;
+  height: 100%;
+  background: #369;
 }
 
-.btn-cancel {
-  background-color: var(--color-danger-hover);
-  color: white;
-  transition: all 0.2s ease-in-out;
-  border: 1px solid transparent;
+.btn-cancel-form-actualitzar-torn:hover {
+  background: #9cf;
 }
 
-.btn-cancel:hover {
-  background-color: var(--color-secondary);
+.btn-cancel-form-actualitzar-torn:active {
+  transform: scale(0.9);
 }
 
-.btn-submit {
-  background-color: var(--color-primary);
-  color: white;
-  transition: all 0.2s ease-in-out;
-  border: 1px solid transparent;
-}
-
-.btn-submit:hover {
-  background-color: var(--color-hover);
-}
-
-.error {
-  border-color: var(--color-error) !important;
-  border-width: 2px;
-}
-
-.error-message {
-  color: var(--color-error);
-  font-size: 0.8rem;
-  margin-top: 0.25rem;
-  background-color: #fef2f2;
-  padding: 0.25rem 0.5rem;
+.btn-submit-form-actualitzar-torn {
+  padding: 5px;
+  border: none;
   border-radius: 4px;
-  display: inline-block;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 100%;
+  background: #369;
 }
+
+.btn-submit-form-actualitzar-torn:hover {
+  background: #9cf;
+}
+
+.btn-submit-form-actualitzar-torn:active {
+  transform: scale(0.9);
+}
+
+/* NO TOCAR A- */
+.error-input-form-actualitzar-torn {
+  outline: 2px solid #b44;
+  color: #b44;
+  overflow: auto;
+}
+
+.error-message-form-actualitzar-torn {
+  display: flex;
+  align-items: center;
+  font-size: 0.6em;
+  padding-left: 5px;
+  background: #fff;
+  color: #b44;
+  width: 100%;
+  height: 25px;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  overflow: auto;
+}
+/* NO TOCAR -Z */
 
 @media (max-width: 550px) {
-  .btn-cancel,
-  .btn-submit {
-    width: 12%;
+  .form-actions-form-actualitzar-torn {
+    justify-content: center;
+  }
+
+  .form-group-form-actualitzar-torn > input {
+    font-size: 0.3em;
+  }
+
+  .form-group-form-actualitzar-torn {
+    height: 45px;
+  }
+  
+  .form-group-form-actualitzar-torn > input {
+    height: 25px;
+  }
+
+  .error-message-form-actualitzar-torn {
+    height: 15px;
+    font-size: 0.3rem;
+  }
+
+  .form-actions-form-actualitzar-torn {
+    height: 25px;
+  }
+
+  .btn-cancel-form-actualitzar-torn {
+    width: 25px;
+  }
+  
+  .btn-submit-form-actualitzar-torn {
+    width: 25px;
   }
 }
