--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/torns-seccio/FormCrearTorn.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/torns-seccio/FormCrearTorn.css
@@ -76,7 +76,7 @@
     display: flex;
     align-items: center;
     font-size: 1.2em;
-    background: #ffc;
+    background: #fff;
     color: #222;
     opacity: 0.9;
     border-top-left-radius: 8px;
@@ -95,12 +95,10 @@
     width: 50%;
     height: 40px;
     padding: 5px;
-    background: #ffc;
+    background: #fff;
     color: #222;
     margin-top: 5px;
     margin-bottom: 5px;
-    background: #ffc;
-    color: #222;
 }
 
 .cn-input-txt-nom-form-crear-torn:focus {
@@ -116,12 +114,10 @@
     width: 50%;
     height: 40px;
     padding: 5px;
-    background: #ffc;
+    background: #fff;
     color: #222;
     margin-top: 5px;
     margin-bottom: 5px;
-    background: #ffc;
-    color: #222;
 }
 
 .cn-input-num-form-crear-torn:focus {
@@ -139,7 +135,7 @@
     display: flex;
     align-items: center;
     font-size: 1.2em;
-    background: #ffc;
+    background: #fff;
     color: #222;
     opacity: 0.9;
     border-top-left-radius: 8px;
@@ -158,12 +154,10 @@
     width: 50%;
     height: 40px;
     padding: 5px;
-    background: #ffc;
+    background: #fff;
     color: #222;
     margin-top: 5px;
     margin-bottom: 5px;
-    background: #ffc;
-    color: #222;
     cursor: pointer;
 }
 
@@ -180,12 +174,10 @@
     width: 50%;
     height: 40px;
     padding: 5px;
-    background: #ffc;
+    background: #fff;
     color: #222;
     margin-top: 5px;
     margin-bottom: 5px;
-    background: #ffc;
-    color: #222;
     cursor: pointer;
 }
 
@@ -273,7 +265,7 @@
     align-items: center;
     font-size: 0.8em;
     padding-left: 10px;
-    background: #ffc;
+    background: #fff;
     color: #b44;
     width: 100%;
     height: 30px;
