--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/contacte/Contacte.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/contacte/Contacte.css
@@ -71,7 +71,7 @@
     font-size: 1.25rem;
     border: none;
     border-radius: 8px;
-    background: #ffc;
+    background: #fff;
     color: #222;
 }
 
@@ -107,7 +107,7 @@
     font-size: 1.25rem;
     border: none;
     border-radius: 8px;
-    background: #ffc;
+    background: #fff;
     color: #222;
 }
 
@@ -143,7 +143,7 @@
     font-size: 1rem;
     border: none;
     border-radius: 8px;
-    background: #ffc;
+    background: #fff;
     color: #222;
     resize: none;
 }
@@ -209,7 +209,7 @@
     width: 100%;
     height: 24px;
     font-size: 0.8rem;
-    background: #ffc;
+    background: #fff;
     color: #b44;
     border-top-right-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -223,7 +223,7 @@
     height: 40px;
     border: none;
     border-radius: 8px;
-    background: #ffc;
+    background: #fff;
     color: #222;
     cursor: pointer;
 }
