--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/LlistaUsuaris.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/LlistaUsuaris.css
@@ -48,7 +48,7 @@
     justify-content: center;
     align-items: center;
     width: 5%;
-    height: 50px;
+    height: 100%;
     background: #111;
     border-bottom-right-radius: 8px;
     visibility: hidden;
@@ -61,7 +61,7 @@
     padding: 5px;
     font-size: 0.8em;
     width: 5%;
-    height: 50px;
+    height: 100%;
     background: #222;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -75,7 +75,7 @@
     padding: 5px;
     font-size: 0.8em;
     width: 35%;
-    height: 50px;
+    height: 100%;
     background: #333;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -89,7 +89,7 @@
     padding: 5px;
     font-size: 0.8em;
     width: 10%;
-    height: 50px;
+    height: 100%;
     background: #444;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -103,7 +103,7 @@
     padding: 5px;
     font-size: 0.8em;
     width: 35%;
-    height: 50px;
+    height: 100%;
     background: #555;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -115,7 +115,7 @@
     justify-content: center;
     align-items: center;
     width: 5%;
-    height: 50px;
+    height: 100%;
     background: #666;
     border-bottom-left-radius: 8px;
     visibility: hidden;
@@ -126,7 +126,7 @@
     flex-direction: column;
     gap: 10px;
     width: 100%;
-    min-height: 50px;
+    min-height: 25px;
 }
 
 .cn-li-item-update-llista-usuaris {
@@ -134,7 +134,7 @@
     justify-content: center;
     align-items: center;
     width: 5%;
-    height: 50px;
+    height: 100%;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
 }
@@ -146,8 +146,8 @@
     padding: 5px;
     font-size: 0.8em;
     width: 5%;
-    height: 50px;
-    background: #ffc;
+    height: 100%;
+    background: #fff;
     color: #222;
     border-radius: 8px;
     overflow: auto;
@@ -160,8 +160,8 @@
     padding: 5px;
     font-size: 0.8em;
     width: 35%;
-    height: 50px;
-    background: #ffc;
+    height: 100%;
+    background: #fff;
     color: #222;
     border-radius: 8px;
     overflow: auto;
@@ -174,8 +174,8 @@
     padding: 5px;
     font-size: 0.8em;
     width: 10%;
-    height: 50px;
-    background: #ffc;
+    height: 100%;
+    background: #fff;
     color: #222;
     border-radius: 8px;
     overflow: auto;
@@ -188,8 +188,8 @@
     padding: 5px;
     font-size: 0.8em;
     width: 35%;
-    height: 50px;
-    background: #ffc;
+    height: 100%;
+    background: #fff;
     color: #222;
     border-radius: 8px;
     overflow: auto;
@@ -200,7 +200,7 @@
     justify-content: center;
     align-items: center;
     width: 5%;
-    height: 50px;
+    height: 100%;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
 }
@@ -264,7 +264,7 @@
 .cn-span-update-llista-usuaris {
     display: flex;
     align-items: center;
-    background: #ddd;
+    background: #fff;
     color: #b44;
     width: 100%;
     height: 25px;
@@ -298,9 +298,8 @@
     border-bottom-right-radius: 8px;
     background: #369;
     cursor: pointer;
-    width: 55%;
+    width: 100%;
     height: 100%;
-    margin-right: 0%;
 }
 
 .cn-bttn-update-llista-usuaris:hover {
