--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/PaginacioUsuaris.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/PaginacioUsuaris.css
@@ -93,7 +93,7 @@
     border: none;
     border-radius: 4px;
     background: #f80;
-    color: #ffc;
+    color: #fff;
     cursor: pointer;
     width: 30px;
     height: 30px;
@@ -114,7 +114,7 @@
     border: none;
     border-radius: 4px;
     background: #222;
-    color: #ffc;
+    color: #fff;
     cursor: pointer;
     width: 30px;
     height: 30px;
