--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/triar-seccio/ArticleTriarApat.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/triar-seccio/ArticleTriarApat.css
@@ -27,8 +27,8 @@
 
 .cn-div-nom-apat-triar-apat {
     display: flex;
-    justify-content: space-between;
-    gap: 5%;
+    justify-content: flex-start;
+    gap: 7%;
     width: 100%;
     height: 40px;
     background: #333;
